// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tsc > arktype 1`] = `
"// arktype.d.ts
declare const test: any;
export { test };
"
`;

exports[`tsc > compiler project sourcemap (build: false) 2`] = `
"// index.d.ts
declare const a = 1;
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"file":"index.d.ts","sources":["../src/index.ts"],"names":[],"mappings":"cAAaA,CAAC;"}
// index.js
const a = 1;

export { a };
//# sourceMappingURL=index.js.map

// index.js.map
{"version":3,"file":"index.js","sources":[],"sourcesContent":[],"names":[],"mappings":";;;;"}"
`;

exports[`tsc > compiler project sourcemap (build: true) 2`] = `
"// index.d.ts
declare const a = 1;
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"file":"index.d.ts","sources":["../src/index.d.ts"],"names":[],"mappings":"cAAqBA,CAAC;"}
// index.js
const a = 1;

export { a };
//# sourceMappingURL=index.js.map

// index.js.map
{"version":3,"file":"index.js","sources":[],"sourcesContent":[],"names":[],"mappings":";;;;"}"
`;

exports[`tsc > composite references 1`] = `
"// input1.d.ts
declare const input1 = "input1";
export { input1 };

// input1.js
const input1 = "input1";

export { input1 };

// input2.d.ts
declare const input2 = "input2";
export { input2 };

// input2.js
const input2 = "input2";

export { input2 };
"
`;

exports[`tsc > composite references incremental 1`] = `
"// input1.d.ts
declare const input1 = "input1";
export { input1 };

// input1.js
const input1 = "input1";

export { input1 };

// input2.d.ts
declare const input2 = "input2";
export { input2 };

// input2.js
const input2 = "input2";

export { input2 };
"
`;

exports[`tsc > import JSON 1`] = `
"// index.d.ts
declare const _exports: string[];
declare let name: string;
declare let age: number;
declare namespace __json_default_export {
  export { name, age };
}
export { age, _exports as bar, bar_json_d as barNs, foo_json_d as fooNs, name };
"
`;

exports[`tsc > jsdoc 1`] = `
"// jsdoc.d.ts
import { Plugin } from 'rollup';
interface RollupMdiFontminOptions extends Plugin {}
declare function fn(): number;
interface Options {
  foo: string;
}
type Foo = string;
declare const _default: number;
export { Foo, Options, RollupMdiFontminOptions, _default as default, fn };

// jsdoc.js
/**
* named export
*/
function fn() {
	return 42;
}
/**
* default export
*/
var jsdoc = fn();

export { jsdoc as default, fn };
"
`;

exports[`tsc > multi declarations 1`] = `
"// index.d.ts
declare const a$1: 1, b$1: 2;
declare const a = 3;
declare const b = 3;
export { a$1 as a, b$1 as b, a as c, b as d };
"
`;

exports[`tsc > references 1`] = `
"// index.d.ts
declare const a = 1;
export { a };

// index.js
const a = 1;

export { a };
"
`;

exports[`tsc > rename infer 1`] = `
"// infer-renaming.d.ts
import { infer as __Infer } from 'zod';
declare const productSchema: any;
declare const product: __Infer<typeof productSchema>;
export { product, productSchema };
"
`;

exports[`tsc > resolve paths > resolver: oxc 1`] = `
"// index.d.ts
declare const foo = 42;
export { foo };
"
`;

exports[`tsc > resolve paths > resolver: tsc 1`] = `
"// index.d.ts
declare const foo = 42;
export { foo };
"
`;

exports[`tsc > ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
declare function defineStyle(style: string): string;
export { defineStyle as default };
"
`;

exports[`tsc > typescript compiler 1`] = `
"// entry1.d.ts
declare const str = "foo";
declare const num = 42;
declare const bool = true;
declare function fn(argument: typeof str): "foo" | 1;
export { bool, fn, num, str };

// entry2.d.ts
interface Unused {
  foo: string;
}
export { Unused };
"
`;

exports[`tsc > vue-sfc w/ ts-compiler 1`] = `
"// main.d.ts
type __VLS_Props = {
  foo: string;
};
declare global {
  interface Window {
    foo: string;
  }
}
declare const __VLS_export: import("vue").DefineComponent<__VLS_Props, {}, {}, {}, {}, import("vue").ComponentOptionsMixin, import("vue").ComponentOptionsMixin, {}, string, import("vue").PublicProps, Readonly<__VLS_Props> & Readonly<{}>, {}, {}, {}, {}, string, import("vue").ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
export { _default as App };
"
`;

exports[`tsc > vue-sfc w/ ts-compiler w/ vueCompilerOptions in tsconfig 1`] = `
"// main.d.ts
declare const __VLS_export: import("vue").DefineComponent<{
  foo: string;
}, {}, {}, {}, {}, import("vue").ComponentOptionsMixin, import("vue").ComponentOptionsMixin, {}, string, import("vue").PublicProps, Readonly<{
  foo: string;
}> & Readonly<{}>, {}, {}, {}, {}, string, import("vue").ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
export { _default as App };
"
`;

exports[`tsc > vue-sfc w/ ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
type __VLS_Props = {
  foo: string;
};
declare global {
  interface Window {
    foo: string;
  }
}
declare const __VLS_export: import("vue").DefineComponent<__VLS_Props, {}, {}, {}, {}, import("vue").ComponentOptionsMixin, import("vue").ComponentOptionsMixin, {}, string, import("vue").PublicProps, Readonly<__VLS_Props> & Readonly<{}>, {}, {}, {}, {}, string, import("vue").ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
declare function defineStyle(style: string): any;
export { _default as App, defineStyle };
"
`;
